--- a/main.html
+++ b/main.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>Meditation App</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div id="app">
+    <!-- Video Section -->
+    <div class="vid-container">
+      <video id="meditationVideo" src="Videos/beach.mp4" loop muted></video>
+    </div>
 
+    <!-- Sound & Controls -->
+    <div class="player-container">
+      <div class="sound-picker">
+        <button id="beach">Meditation-A</button>
+        <button id="rain">Meditation-B</button>
+      </div>
+
+      <div id="time-select">
+        <button id="smaller-mins">2 min</button>
+        <button id="medium-mins">5 min</button>
+        <button id="long-mins">10 min</button>
+      </div>
+
+      <div class="time-display">10:0</div>
+      <button class="play">Play</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
