--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="app">
+  <div class="app">
     <!-- Video Section -->
     <div class="vid-container">
       <video id="meditationVideo" src="Videos/beach.mp4" loop muted></video>
