--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
   <div class="app">
     <!-- Video Section -->
     <div class="vid-container">
-      <video id="meditationVideo" src="Videos/beach.mp4" loop muted></video>
+      <video class="meditation-audio" src="Sounds/beach.mp3" loop muted></video>
     </div>
 
     <!-- Sound & Controls -->
@@ -19,7 +19,7 @@
         <button id="rain">Meditation-B</button>
       </div>
 
-      <div id="time-select">
+      <div class="time-select">
         <button id="smaller-mins">2 min</button>
         <button id="medium-mins">5 min</button>
         <button id="long-mins">10 min</button>
