--- a/main.html
+++ b/main.html
@@ -9,22 +9,28 @@
   <div class="app">
     <!-- Video Section -->
     <div class="vid-container">
-      <video class="meditation-audio" src="Sounds/beach.mp3" loop muted></video>
+      <video id="meditationVideo" src="Videos/beach.mp4" loop muted></video>
     </div>
 
-    <!-- Sound & Controls -->
+    <!-- Player Section -->
     <div class="player-container">
+      <!-- ✅ Audio tag -->
+      <audio class="meditation-audio" src="Sounds/beach.mp3"></audio>
+
+      <!-- ✅ Sound Buttons -->
       <div class="sound-picker">
         <button id="beach">Meditation-A</button>
         <button id="rain">Meditation-B</button>
       </div>
 
+      <!-- ✅ Time Buttons -->
       <div class="time-select">
         <button id="smaller-mins">2 min</button>
         <button id="medium-mins">5 min</button>
         <button id="long-mins">10 min</button>
       </div>
 
+      <!-- ✅ Timer + Play Button -->
       <div class="time-display">10:0</div>
       <button class="play">Play</button>
     </div>
