--- a/main.html
+++ b/main.html
@@ -3,37 +3,78 @@
 <head>
   <meta charset="UTF-8" />
   <title>Meditation App</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      text-align: center;
+      font-family: Arial, sans-serif;
+      background: #f0f0f0;
+    }
+
+    .app {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .vid-container {
+      position: relative;
+      height: 300px;
+      overflow: hidden;
+    }
+
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .sound-picker button {
+      margin: 10px;
+      padding: 10px 20px;
+    }
+
+    .time-select button {
+      margin: 10px;
+      padding: 10px 20px;
+    }
+
+    .play {
+      margin: 20px;
+      padding: 12px 24px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    .time-display {
+      font-size: 32px;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
   <div class="app">
-    <!-- Video Section -->
     <div class="vid-container">
-      <video id="meditationVideo" src="Videos/beach.mp4" loop muted></video>
+      <video class="bg-video" src="Videos/beach.mp4" loop muted></video>
     </div>
 
-    <!-- Player Section -->
+    <div class="sound-picker">
+      <button id="beach">Meditation-A</button>
+      <button id="rain">Meditation-B</button>
+    </div>
+
+    <div class="time-select">
+      <button id="smaller-mins">2 Min</button>
+      <button id="medium-mins">5 Min</button>
+      <button id="long-mins">10 Min</button>
+    </div>
+
     <div class="player-container">
-      <!-- ✅ Audio tag -->
       <audio class="meditation-audio" src="Sounds/beach.mp3"></audio>
-
-      <!-- ✅ Sound Buttons -->
-      <div class="sound-picker">
-        <button id="beach">Meditation-A</button>
-        <button id="rain">Meditation-B</button>
-      </div>
-
-      <!-- ✅ Time Buttons -->
-      <div class="time-select">
-        <button id="smaller-mins">2 min</button>
-        <button id="medium-mins">5 min</button>
-        <button id="long-mins">10 min</button>
-      </div>
-
-      <!-- ✅ Timer + Play Button -->
-      <div class="time-display">10:0</div>
       <button class="play">Play</button>
     </div>
+
+    <div class="time-display">10:00</div>
   </div>
 
   <script src="script.js"></script>
