--- a/main.html
+++ b/main.html
@@ -69,11 +69,10 @@
     <div class="sound-picker">
       <button data-sound="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" data-video="https://www.w3schools.com/html/mov_bbb.mp4">Meditation A</button>
       <button data-sound="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" data-video="https://cdn.pixabay.com/vimeo/398048073/Rain%20drops%20on%20the%20window%20glass%20in%20HD%20_%20Free%20stock%20video%20-%20Pixabay.mp4?width=640&hash=3b91cd1e7fa6bc54c33f61e406c2a3a204a38789">Meditation B</button>
-    </div>
 <div class="time-select" id="time-select">
-  <button id="smaller-mins">2 min</button>
-  <button id="medium-mins">5 min</button>
-  <button id="long-mins">10 min</button>
+  <button class="smaller-mins">2 min</button>
+  <button class="medium-mins">5 min</button>
+  <button class="long-mins">10 min</button>
 </div>
 
     <div class="time-display">10:0</div>
