--- a/main.html
+++ b/main.html
@@ -70,11 +70,12 @@
       <button data-sound="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" data-video="https://www.w3schools.com/html/mov_bbb.mp4">Meditation A</button>
       <button data-sound="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" data-video="https://cdn.pixabay.com/vimeo/398048073/Rain%20drops%20on%20the%20window%20glass%20in%20HD%20_%20Free%20stock%20video%20-%20Pixabay.mp4?width=640&hash=3b91cd1e7fa6bc54c33f61e406c2a3a204a38789">Meditation B</button>
     </div>
-<div class="time-select" id="time-select">
-  <button id="smaller-mins">2 min</button>
-  <button id="medium-mins">5 min</button>
-  <button id="long-mins">10 min</button>
-</div>
+
+    <div class="time-select" id="time-select">
+      <button id="smaller-mins" class="smaller-mins">2 min</button>
+      <button id="medium-mins" class="medium-mins">5 min</button>
+      <button id="long-mins" class="long-mins">10 min</button>
+    </div>
 
     <div class="time-display">10:0</div>
 
@@ -138,8 +139,8 @@
 
     timeButtons.forEach(button => {
       button.addEventListener('click', () => {
-        const [mins, secs] = button.textContent.split(':');
-        duration = parseInt(mins) * 60 + parseInt(secs);
+        const [mins] = button.textContent.split(' ');
+        duration = parseInt(mins) * 60;
         updateTimeDisplay(duration);
       });
     });
